--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,9 +2,9 @@ version: 2.1
 jobs:
   build:
     docker: 
-      - image: circleci/node:latest # the primary container, where your job's commands are run
+      - image: circleci/node:latest
     steps:
-      - checkout # check out the code in the project directory
-      - run: npm install # run the `echo` command
-      - run: sudo npm install -g truffle # run the `echo` command
+      - checkout
+      - run: npm install
+      - run: sudo npm install -g truffle
       - run: truffle test
