Push contract address as circle ci artifact

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2.1
 jobs:
-  build:
+  test:
     docker: 
       - image: circleci/node:latest
     steps:
@@ -8,3 +8,20 @@ jobs:
       - run: npm install
       - run: sudo npm install -g truffle
       - run: truffle test
+
+  deploy_ropsten:
+    docker:
+      - image: circleci/node:latest
+    steps:
+      - checkout
+      - run: ./auto/deploy
+      - store_artifacts:
+          path: /deployed_address.txt
+
+workflows:
+  test-and-deploy:
+    jobs:
+      - test
+      - deploy_ropsten:
+          requires:
+            - test
